[package]
name = "sudoku-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sudoku-generator"
path = "src/main.rs"

[dependencies]
sudoku = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
